--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </nav>
     <style>
       .section__pic-container .profile-pic {
-        width: 450px; /* Ajustez la taille selon vos besoins */
-        height: 450px; /* Assurez-vous que la hauteur et la largeur sont égales */
+        width: 300px; /* Ajustez la taille selon vos besoins */
+        height: 300px; /* Assurez-vous que la hauteur et la largeur sont égales */
         border-radius: 50%; /* Cela rend l'image circulaire */
         object-fit: cover; /* Assure que l'image remplisse le cercle sans déformation */
       }
@@ -168,7 +168,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>ReactJs</h3>
+                  <h3>React</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -209,7 +209,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">BackEnd Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
