--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h1 class="title">Mohamed Oussema Boussida</h1>
       <p class="section__text__p2">Software Engineering Student</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/cv.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/BoussidaOussema_cv.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='#contact'">
@@ -283,7 +283,7 @@
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>Mongo</h3>
+                <h3>MongoDB</h3>
                 <p>Experienced</p>
               </div>
             </article>
@@ -304,14 +304,9 @@
   </section>
   <br></br>
   <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
+  
+  
+  
   <style>
     .project-img {
       width: 80px;
@@ -410,12 +405,7 @@
   </section>
   <br></br>
   <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
+
 
   <section id="contact">
     <p class="section__text__p1">Get in Touch</p>
